--- a/index.html
+++ b/index.html
@@ -1,1 +1,227 @@
-Data Portfolio
+<!DOCTYPE HTML>
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title> Data Practitioner : Portfolio </title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<div id="header">
+
+				<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/ghraycee_avatar.jpeg" alt="" /></span>
+							<h1 id="title">ghraycee</h1>
+							<p> Data Practitioner </p>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Welcome</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+				<div class="bottom">
+
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/grace-anulika-eze-data-unicorn/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.xing.com/profile/Grace_Eze2/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
+							<li><a href="https://github.com/ghraciella" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.kaggle.com/graceeze" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+							<li><a href="mailto:grace.anulikaeze@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+
+				</div>
+
+			</div>
+
+		<!-- Main -->
+			<div id="main">
+
+				<!-- Welcome -->
+					<section id="top" class="one dark cover">
+						<div class="container">
+
+                                <header>
+								<h2 class="alt">Welcome to <strong>Ghraycee's Portfolio</strong></h2>
+								<p> <strong>Data Practitioner - Industrial Mathematician - Data Analytics Engineer</strong></p>
+							</header>
+
+                            <div class="bottom">
+
+                                <!-- Social Icons -->
+                                    <ul class="icons">
+                                        <li><a href="https://www.linkedin.com/in/grace-anulika-eze-data-unicorn/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                        <li><a href="https://www.xing.com/profile/Grace_Eze2/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
+                                        <li><a href="https://github.com/ghraciella" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                                        <li><a href="https://www.kaggle.com/graceeze" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+                                        <li><a href="mailto:grace.anulikaeze@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                                    </ul>
+            
+                            </div>
+
+							<footer>
+								<a href="#portfolio" class="button scrolly"> Projects</a>
+							</footer>
+
+						</div>
+					</section>
+
+
+
+				<!-- About Me -->
+                <section id="about" class="two">
+                    <div class="container">
+
+                        <header>
+                            <h2>About Me</h2>
+                        </header>
+
+                        <span class="circle-image"><img src="images/ghraycee_avatar.jpeg" alt="" /></span>
+
+                        <p>I am <strong>Grace Anulika Eze</strong>, I am a  data practitioner and developer constantly motivated by every new experience I learn through data 
+                            and its impact on efficient decision making. I also have the necessary technical knowledge and can effectively use data-driven methods to create solutions. </p>
+
+                    </div>
+
+                    <p>Asides my background and interest in data, I also love to read, listen to music, watch movies and discover more about life through travel.
+                </section>
+
+
+				<!-- Portfolio -->
+					<section id="portfolio" class="three">
+						<div class="container">
+
+							<header>
+								<h2> Data Portfolio</h2>
+							</header>
+
+							<p> Gradually building my portfolio and this contains a collection of some of my projects :-). It is an expanding collection of various projects accross different topics and technologies stemming from my interest areas ; data analysis, data engineering, analytical engineering, data science and other curiousities.</p>
+
+							<div class="row">
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/moosic_project/moosic_recapp.png" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/mood_music_recommendation_system"> MOOSIC - mood based music recommendation system</a>
+                                            </h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/forage/projectsolution.jpg" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/mood_music_recommendation_system"> Standard Bank Data Analysis Home Loan Eligibility Prediction</a>
+                                            </h3>										
+                                        </header>
+									</article>
+								</div>
+                                <div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/forage/top5socialbuzz.jpg" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-science-projects/Prediction-and-Optimization-Logisitic-Analysis"> Accenture Data Analytics and Visualization Virtual Experience</a>
+                                            </h3>
+                                        </header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/projects/nn-classification.png" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/Thesis-Neural-Network-Kaggle-Datasets-Kvasir-Malaria"> Applications of Neural Network Models in Kaggle Competition: Malaria Cell Classification and Kvasir Endoscopic Images</a>
+                                            </h3>
+                                        </header>
+									</article>
+								</div>                                
+								<div class="col-4 col-12-mobile">
+                                    <article class="item">
+										<a href="#" class="image fit"><img src="images/projects/logistic_workflow_UML.png" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-science-projects/Prediction-and-Optimization-Logisitic-Analysis"> Prediction Monitoring and Optimization of Transport and Logisitic Processes</a>
+                                            </h3>	
+                                        </header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/projects/computer_vision.jpeg" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-science-projects/Visual-Perception-Segmentation-and-Depth-Estimation-Networks"> Visual Perception: Segmentation and Depth Estimation Networks</a>
+                                            </h3>
+                                        </header>
+                                    </article>
+								</div>
+							</div>
+
+						</div>
+					</section>
+
+
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Contact</h2>
+							</header>
+
+							<p>I would love to hear from you! </p>
+
+							<form method="post" action="#">
+								<div class="row">
+									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="col-12">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<div id="footer">
+
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>&copy; 2023 All rights reserved.</li><li>Design template: <a href="http://html5up.net">html5 up</a></li>
+					</ul>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
