updating structure commit 001

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+<!--
+	Custom edits to Prologue by Grace for 
+	ghraciella.github.io
+-->
+
 <html>
 	<head>
 		<title> Data Practitioner : Portfolio </title>
@@ -78,7 +84,7 @@
                             </div>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly"> Projects</a>
+								<a href="#portfolio" class="button scrolly"> My Projects</a>
 							</footer>
 
 						</div>
@@ -101,7 +107,11 @@
 
                     </div>
 
-                    <p>Asides my background and interest in data, I also love to read, listen to music, watch movies and discover more about life through travel.
+                    <p>Asides my background and interest in data, I also love to read, listen to music, watch movies and discover more about life through travel. I consider myself a pseudo-poet and a sentient plant.
+                        <div class="button">
+                            <a href="files/GraceAnulikaEze_DAEDP0923.pdf" target="_blank" type="application/pdf">View Resume
+                            </a>
+                        </div>
                 </section>
 
 
@@ -110,7 +120,7 @@
 						<div class="container">
 
 							<header>
-								<h2> Data Portfolio</h2>
+								<h2> Projects: Data Portfolio</h2>
 							</header>
 
 							<p> Gradually building my portfolio and this contains a collection of some of my projects :-). It is an expanding collection of various projects accross different topics and technologies stemming from my interest areas ; data analysis, data engineering, analytical engineering, data science and other curiousities.</p>
@@ -171,38 +181,39 @@
                                     </article>
 								</div>
 							</div>
-
 						</div>
 					</section>
 
 
+            
 				<!-- Contact -->
-					<section id="contact" class="four">
+				<footer id="footer">
+                    <section id="contact" class="four">
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contact </h2>
 							</header>
+                            <p>I would love to hear from you! </p>
 
-							<p>I would love to hear from you! </p>
+                            </section>
+                            <ul class="icons alt">
+                                <li><p> <u> Email </u> : grace.anulikaeze@gmail.com</p></li>
+                                <li><p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  </p></li>
+                                <li><p> <u> Location </u> : Bremen, Germany</p></li>
+                            </ul>
 
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
+                            <ul class="icons alt">
+                                <li><a href="https://www.linkedin.com/in/grace-anulika-eze-data-unicorn/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+                                <li><a href="https://www.instagram.com/dr_adahd/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+                            </ul>
 
-						</div>
+                        </div>
+
 					</section>
+				</footer>
 
-			</div>
+
 
 		<!-- Footer -->
 			<div id="footer">
