--- a/index.html
+++ b/index.html
@@ -128,19 +128,39 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
+										<a href="#" class="image fit"><img src="images/projects/fraud_detection_photo.png" alt="" /></a>
+										<header>
+											<h2>
+                                                <a href="https://github.com/ghraciella/fraud_detection_energy"> Fraud Detection: Energy Utility Data</a>
+                                            </h2>
+										</header>
+									</article>
+									<!-- 
+									<article class="item">
+										<a href="#" class="image fit"><img src="" alt="" /></a>
+										<header>
+											<h2>
+                                                <a href=" ">  </a>
+                                            </h2>										
+                                        </header>
+									</article>
+									-->
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
 										<a href="#" class="image fit"><img src="images/moosic_project/moosic_recapp.png" alt="" /></a>
 										<header>
-											<h3>
+											<h2>
                                                 <a href="https://github.com/ghraciella/mood_music_recommendation_system"> MOOSIC - mood based music recommendation system</a>
-                                            </h3>
+                                            </h2>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/forage/projectsolution.jpg" alt="" /></a>
 										<header>
-											<h3>
-                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-analysis-projects/Standard-Bank-Data-Analysis-Home-Loan-Eligibility-Prediction"> Standard Bank Data Analysis Home Loan Eligibility Prediction</a>
-                                            </h3>										
+											<h2>
+                                                <a href="https://github.com/ghraciella/data-projects-and-practice/tree/main/data-analysis-projects/Standard-Bank-Data-Analysis-Home-Loan-Eligibility-Prediction"> Standard Bank Data Analysis Home Loan Eligibility Prediction</a>
+                                            </h2>										
                                         </header>
 									</article>
 								</div>
@@ -148,17 +168,17 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/forage/top5socialbuzz.jpg" alt="" /></a>
 										<header>
-											<h3>
-                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-analysis-projects/Accenture-Data-Analytics-and-Visualization-Virtual-Experience"> Accenture Data Analytics and Visualization Virtual Experience</a>
-                                            </h3>
+											<h2>
+                                                <a href="https://github.com/ghraciella/data-projects-and-practice/tree/main/data-analysis-projects/Accenture-Data-Analytics-and-Visualization-Virtual-Experience"> Accenture Data Analytics and Visualization Virtual Experience</a>
+                                            </h2>
                                         </header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/projects/nn-classification.png" alt="" /></a>
 										<header>
-											<h3>
+											<h2>
                                                 <a href="https://github.com/ghraciella/Thesis-Neural-Network-Kaggle-Datasets-Kvasir-Malaria"> Applications of Neural Network Models in Kaggle Competition: Malaria Cell Classification and Kvasir Endoscopic Images</a>
-                                            </h3>
+                                            </h2>
                                         </header>
 									</article>
 								</div>                                
@@ -166,17 +186,17 @@
                                     <article class="item">
 										<a href="#" class="image fit"><img src="images/projects/logistic_workflow_UML.png" alt="" /></a>
 										<header>
-											<h3>
-                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-science-projects/Prediction-and-Optimization-Logisitic-Analysis"> Prediction Monitoring and Optimization of Transport and Logisitic Processes</a>
-                                            </h3>	
+											<h2>
+                                                <a href="https://github.com/ghraciella/data-projects-and-practice/tree/main/data-science-projects/Prediction-and-Optimization-Logisitic-Analysis"> Prediction Monitoring and Optimization of Transport and Logisitic Processes</a>
+                                            </h2>	
                                         </header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/projects/computer_vision.jpeg" alt="" /></a>
 										<header>
-											<h3>
-                                                <a href="https://github.com/ghraciella/data-practitioner-project-portfolio/tree/main/data-science-projects/Visual-Perception-Segmentation-and-Depth-Estimation-Networks"> Visual Perception: Segmentation and Depth Estimation Networks</a>
-                                            </h3>
+											<h2>
+                                                <a href="https://github.com/ghraciella/data-projects-and-practice/tree/main/data-science-projects/Visual-Perception-Segmentation-and-Depth-Estimation-Networks"> Visual Perception: Segmentation and Depth Estimation Networks</a>
+                                            </h2>
                                         </header>
                                     </article>
 								</div>
