--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							</header>
 
 							<p> Gradually building my portfolio and this contains a collection of some of my projects :-). It is an expanding collection of various projects accross different topics and technologies stemming from my interest areas ; data analysis, data engineering, analytical engineering, data science and other curiousities.</p>
-
+							<!-- 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -135,7 +135,7 @@
                                             </h3>
 										</header>
 									</article>
-									<!-- 
+									
 									<article class="item">
 										<a href="#" class="image fit"><img src="" alt="" /></a>
 										<header>
@@ -144,9 +144,18 @@
                                             </h2>										
                                         </header>
 									</article>
-									-->
+									
 								</div>
+							-->
 								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/projects/fraud_detection_photo.png" alt="" /></a>
+										<header>
+											<h3>
+                                                <a href="https://github.com/ghraciella/fraud_detection_energy"> Fraud Detection: Energy Utility Data</a>
+                                            </h3>
+										</header>
+									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/moosic_project/moosic_recapp.png" alt="" /></a>
 										<header>
